attempt to debug

--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
+  "name": "ecommerce_db",
+  "version": "1.0.0",
+  "description": "Back-end API for an e-commerce site",
+  "main": "server.js",
+  "scripts": {
+    "start": "node index.js",
+    "seed": "npx sequelize-cli db:seed:all",
+    "db:create": "npx sequelize-cli db:create",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:drop": "npx sequelize-cli db:drop"
+  },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.10.2",
     "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2"
+  },
+  "devDependencies": {
     "sequelize-cli": "^6.6.2"
   }
 }
